@@ -37,9 +37,6 @@
 /*** Switched to GSL Implementation, put routine under GSL protection 	***/
 
 #include <stddef.h>
-#include <stdlib.h>
-#include <stdio.h>
-#include <math.h>
 #include <float.h>
 #include "potfit.h"
 #include "utils.h"
