@@ -1,7 +1,17 @@
-trunk-20100910
+trunk-20100812
++ make endpot optional, is set to ${startpot}_end it not given
++ change i386 profile to i586
++ remove a few commented lines that are not necessary any more
++ set reasonable inital values for starting parameters
++ [APOT] add cbb potential to potfit and makeapot
++ add flagfile interruption to evo and remove unneeded variables
++ remove unneeded header files as well
++ adjust diff_evo parameters
+
+trunk-20100810
 + strip even more (comments)
 
-devel-20100908
+devel-20100809
 + final commit before next release
 + evolutionary algorithm now restarts if average==best
 + fix Makefile for gcc profiles
